# shardedkv

./: .gitignore  kv.py  lookup.py  main.py  pyproject.toml  pytest.ini  test_kv.py
examples/: dedup.py
