[project]
name = "default-cld-p4rr2d2lsnvlxjusuv3t9qrnjz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bigquery>=0.0.45",
    "ray[data,serve]>=2.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
